--- a/experiments/configs/mixcem_awa2.yaml
+++ b/experiments/configs/mixcem_awa2.yaml
@@ -26,7 +26,7 @@ shared_params:
   dataset_config:
     dataset: "awa2"
     num_workers: 8
-    batch_size: 256 #64
+    batch_size: 512 #64
 
     # DATASET VARIABLES
     root_dir: /anfs/bigdisc/me466/AwA2/Animals_with_Attributes2
@@ -39,7 +39,7 @@ shared_params:
   intervention_config:
     competence_levels: [1]
     intervention_freq: 1
-    intervention_batch_size: 256
+    intervention_batch_size: 1024
     val_intervention_policies:
       - policy: "random"
         group_level: True
@@ -57,7 +57,9 @@ shared_params:
   max_epochs: 150
   top_k_accuracy: null
   save_model: True
-  patience: 15
+  patience: 2 # After 10 epochs of no improvement, we stop
+  lr_scheduler_patience: 5
+  check_val_every_n_epoch: 5
   emb_size: 16
   extra_dims: 0
   concept_loss_weight: [1, 5, 10]
@@ -89,6 +91,12 @@ shared_params:
             noise_level: 0.5
 
 runs:
+
+  - architecture: 'ConceptEmbeddingModel'
+    run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
+    sigmoidal_prob: True
+    training_intervention_prob: 0.25
+    embedding_activation: "leakyrelu"
 
   - architecture: 'ConceptBottleneckModel'
     run_name: "CBM_Sigmoid_Baseline_cwl_{concept_loss_weight}"
@@ -176,12 +184,6 @@ runs:
         - intervention_weight
         - emb_size
     grid_search_mode: exhaustive
-
-  - architecture: 'ConceptEmbeddingModel'
-    run_name: "CEM_Baseline_cwl_{concept_loss_weight}"
-    sigmoidal_prob: True
-    training_intervention_prob: 0.25
-    embedding_activation: "leakyrelu"
 
   - architecture: 'PosthocConceptBottleneckModel'
     run_name: "PCBM_reg_{reg_strength}_l1_{l1_ratio}_penalty_{svd_penalty}"
